--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -67,13 +67,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="bQw-lD-3pe">
-                        <barButtonItem key="rightBarButtonItem" title="Done" id="ftD-az-mxw">
-                            <connections>
-                                <action selector="theDoneButtonPressed:" destination="I1A-ko-WaS" id="8vU-Ua-Au2"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="bQw-lD-3pe"/>
                     <connections>
                         <outlet property="tagChoicesView" destination="x2C-mZ-onz" id="o7q-Z2-nEW"/>
                     </connections>
