--- a/ChachaT/ScrollViewSearchView.xib
+++ b/ChachaT/ScrollViewSearchView.xib
@@ -15,35 +15,53 @@
                     <rect key="frame" x="0.0" y="0.0" width="577" height="74"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9NQ-uw-kwB">
-                            <rect key="frame" x="0.0" y="0.0" width="195" height="74"/>
+                            <rect key="frame" x="0.0" y="0.0" width="147" height="74"/>
                             <subviews>
                                 <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ShF-V1-DNL" customClass="TagListView" customModule="ChachaT">
                                     <rect key="frame" x="8" y="25" width="0.0" height="24"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" id="Scz-8p-IDp"/>
                                         <constraint firstAttribute="height" constant="24" id="wnR-Qe-QaA"/>
                                     </constraints>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Qm8-QK-DG2">
-                                    <rect key="frame" x="31" y="22" width="150" height="30"/>
+                                    <rect key="frame" x="31" y="22" width="102" height="30"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtV-9o-qhN">
-                                            <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jtV-9o-qhN">
+                                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                            <state key="normal" image="SearchIconWhite">
+                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="searchButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="Hrz-DF-Pqa"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcn-RE-n9V">
-                                            <rect key="frame" x="52" y="0.0" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="36" y="0.0" width="30" height="30"/>
+                                            <state key="normal" title="Go">
+                                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="goButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="SBt-i9-p54"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPh-de-YPj">
-                                            <rect key="frame" x="104" y="0.0" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                            <rect key="frame" x="72" y="0.0" width="30" height="30"/>
+                                            <state key="normal" title="Exit">
+                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="exitButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="CcL-T8-xhE"/>
+                                            </connections>
                                         </button>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="jtV-9o-qhN" firstAttribute="height" secondItem="mcn-RE-n9V" secondAttribute="height" id="taZ-Qg-4kU"/>
+                                        <constraint firstItem="jtV-9o-qhN" firstAttribute="width" secondItem="mcn-RE-n9V" secondAttribute="width" id="yzs-Dc-dDe"/>
+                                    </constraints>
                                 </stackView>
                             </subviews>
-                            <color key="backgroundColor" red="0.0039215686269999999" green="0.76470588240000004" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="ShF-V1-DNL" secondAttribute="width" id="3WK-az-AiH"/>
                                 <constraint firstAttribute="width" secondItem="ShF-V1-DNL" secondAttribute="width" constant="80" id="8rZ-S9-KRj"/>
@@ -95,7 +113,10 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="theExitButton" destination="SPh-de-YPj" id="kEf-un-BVG"/>
+                <outlet property="theGoButton" destination="mcn-RE-n9V" id="EEo-1q-Qg5"/>
                 <outlet property="theScrollView" destination="wnR-At-8N3" id="k8X-94-eOQ"/>
+                <outlet property="theSearchButton" destination="jtV-9o-qhN" id="NEC-yO-SGO"/>
                 <outlet property="theTagChosenHolderView" destination="9NQ-uw-kwB" id="66j-0I-a5N"/>
                 <outlet property="theTagChosenListView" destination="ShF-V1-DNL" id="Z6a-7c-4Nb"/>
                 <outlet property="theTagListViewWidthConstraint" destination="Scz-8p-IDp" id="tKX-Hl-baU"/>
@@ -103,4 +124,7 @@
             <point key="canvasLocation" x="796.5" y="351"/>
         </view>
     </objects>
+    <resources>
+        <image name="SearchIconWhite" width="18" height="19"/>
+    </resources>
 </document>
