--- a/ChachaT/Filtering.storyboard
+++ b/ChachaT/Filtering.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <subviews>
                                     <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x2C-mZ-onz" customClass="TagListView" customModule="ChachaT">
-                                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                        <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -30,16 +30,6 @@
                                     <constraint firstAttribute="trailing" secondItem="x2C-mZ-onz" secondAttribute="trailing" id="r1U-4A-4XX"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" placeholder="Search Tags" translatesAutoresizingMaskIntoConstraints="NO" id="b8d-2d-LnC">
-                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="qGv-xw-eGR"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="I1A-ko-WaS" id="qiI-NR-jvX"/>
-                                </connections>
-                            </searchBar>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="FYC-lr-Sp7">
                                 <rect key="frame" x="290" y="290" width="20" height="20"/>
                             </activityIndicatorView>
@@ -47,22 +37,17 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="VSR-xX-ycl" firstAttribute="top" secondItem="HPb-BY-jXc" secondAttribute="bottom" constant="44" id="7oF-yd-eQx"/>
-                            <constraint firstItem="b8d-2d-LnC" firstAttribute="leading" secondItem="SST-8Z-EKe" secondAttribute="leading" id="AJf-Q2-TiT"/>
-                            <constraint firstAttribute="trailing" secondItem="b8d-2d-LnC" secondAttribute="trailing" id="Ifm-xA-6pX"/>
                             <constraint firstItem="VSR-xX-ycl" firstAttribute="leading" secondItem="SST-8Z-EKe" secondAttribute="leading" id="Q8F-76-7kr"/>
-                            <constraint firstItem="b8d-2d-LnC" firstAttribute="top" secondItem="HPb-BY-jXc" secondAttribute="bottom" id="U8S-ur-WFU"/>
                             <constraint firstItem="FYC-lr-Sp7" firstAttribute="centerY" secondItem="SST-8Z-EKe" secondAttribute="centerY" id="W9p-k7-qWD"/>
                             <constraint firstItem="FYC-lr-Sp7" firstAttribute="centerX" secondItem="SST-8Z-EKe" secondAttribute="centerX" id="Z1y-H2-sLC"/>
                             <constraint firstAttribute="trailing" secondItem="VSR-xX-ycl" secondAttribute="trailing" id="bpw-Ow-FPQ"/>
                             <constraint firstItem="8zR-1V-GnX" firstAttribute="top" secondItem="VSR-xX-ycl" secondAttribute="bottom" id="ckL-Av-Z06"/>
                             <constraint firstItem="VSR-xX-ycl" firstAttribute="top" secondItem="SST-8Z-EKe" secondAttribute="top" id="eQf-WH-dTZ"/>
-                            <constraint firstItem="x2C-mZ-onz" firstAttribute="top" secondItem="b8d-2d-LnC" secondAttribute="bottom" id="fkx-hs-ePb"/>
-                            <constraint firstItem="VSR-xX-ycl" firstAttribute="top" secondItem="b8d-2d-LnC" secondAttribute="bottom" id="hnN-tR-73z"/>
+                            <constraint firstItem="x2C-mZ-onz" firstAttribute="top" secondItem="HPb-BY-jXc" secondAttribute="bottom" id="enx-ks-A6l"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="7oF-yd-eQx"/>
-                                <exclude reference="hnN-tR-73z"/>
                             </mask>
                         </variation>
                     </view>
@@ -70,6 +55,7 @@
                     <connections>
                         <outlet property="backgroundColorView" destination="VSR-xX-ycl" id="gnc-AV-l2U"/>
                         <outlet property="tagChoicesView" destination="x2C-mZ-onz" id="o7q-Z2-nEW"/>
+                        <outlet property="tagChoicesViewTopConstraint" destination="enx-ks-A6l" id="Gkh-z1-hcb"/>
                         <segue destination="Dth-C6-7C9" kind="presentation" identifier="SearchPageToTinderMainPageSegue" id="aQB-SX-kvS"/>
                     </connections>
                 </viewController>
